# stratcona

./: .gitignore  README.md  pyproject.toml  requirements-demos.txt  requirements.txt  requirements_dev.txt
demos/: basic_pymc_regression.py  basic_wearout_modelling.py  bti_ro_inference.py  complex_model_demo.py  custom_inf_algo_demo.py  digital_logic_test.py  discrete_wearout.py  distribution_sandbox.py  electromigration_model_comparison.py  electromigration_qualification.py  em_qual_npyro.py  heavy_ball_riddle.py  hmc_viz.py  htol_demo.py  jit_testing.py  lifespan_estimation.py  metrics_comparison.py  scratch.py  tddb_inference.py  threshold_demo.py  vth_sensor_inference.py  weibull_inference.py
demos/bed_studies/: electromigration_qualification.py  htol_utility_analysis.py  idfbcamp_characterization.py
demos/data/: electromigration_bed_evals.json  electromigration_good_pst_hyls.json  electromigration_marg_pst_hyls.json  electromigration_poor_pst_hyls.json  htol_bed_evals.json  idfbcamp-bed-evals.json  idfbcamp_pst_hyls_n.json  idfbcamp_pst_hyls_p.json  idfbcamp_qual_for_inf.json
demos/irps2025studies/: bti_ro_data.json  bti_ro_inference.py  dissertation_bti_ro_inference.py  tddb_inference.py  vth_sensor_inference.py  weibull_inference.py
demos/misc_demos/: digital_logic_test.py  distribution_transforms_figure_demo.py  heavy_ball_riddle.py
demos/qualification_studies/: electromigration_qualification.py  htol_fit_qual.py  htol_ro_qual.py  idfbcamp_qualification.py  idfbcamp_qualification_revision.py
demos/sensor_fusion_studies/: seq_inf_risk_profiling.py
stratcona/: __init__.py  manager.py
stratcona/assistants/: __init__.py  dist_translate.py  iterator.py  probability.py  sampler.py  samplers.py
stratcona/engine/: __init__.py  bed.py  boed.py  inference.py  metrics.py  minimization.py
stratcona/modelling/: __init__.py  builder.py  constructors.py  manager.py  manager_old.py  relmodel.py  tensor_dict_translator.py  variables.py
tests/: toplevel_test.py
tests/assistants/: iterator_test.py  translate_test.py
tests/engine/: bed_algo_test.py  bed_test.py  eig_test.py  inference_test.py  lp_x_g_y_test.py  metrics_test.py  minimization_test.py  quantile_test.py  smc_test.py  v_sampling_test.py
tests/full_flow/: discrete_wearout_test.py
tests/modelling/: builder_test.py  relmodel_test.py  translator_test.py
